# TJD-Toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: go.yml  python-package.yml
gui/: main.py
gui/utils/: font_utils.py
gui/views/: home.py
gui/views/PUC/: featureeins.py
internal/core/: __init__.py  config.py  exceptions.py  platform.py
tests/gui/: test_main.py
tests/gui/utils/: test_font_utils.py
tests/gui/views/: test_home.py
tests/gui/views/PUC/: test_featureeins.py
tests/internal/core/: test_config.py  test_exceptions.py  test_platform.py
